--- a/VRChat/68/1020668.html
+++ b/VRChat/68/1020668.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ci9wOqytelRI06YRIZguqbnj10mpiD1atCrcyoacFeY="></script>
+    "eFBTxhUtmtbUPJGh42UNtFUcm3tZoN8rJC3TTai+kdw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けBlenderアドオン","description":"■対応バージョン\nBlender 2.93以降（2.93、3.1.2で動作確認）\n\n\nVRChat用のモデルデータの補正を、補助するツールです。\n\n機能一覧\n・ボーン名の部分置換（前方一致、後方一致、完全一致、正規表現）\n・シェイプキーに「vrc.」を一括付与\n・Maya キッシュ v.2系のfbxデータ補完\n\n\n使用方法は下記を参照\nhttps://github.com/Himakuma/blender-vrc-tools","url":"https://booth.pm/ja/items/1020668","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/3a45aa53-22ce-4e64-972f-6d9cec0b3557/i/1020668/def59d77-1bc7-4f7c-a977-d07ba44fa47b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ci9wOqytelRI06YRIZguqbnj10mpiD1atCrcyoacFeY="></script>
+    nonce="eFBTxhUtmtbUPJGh42UNtFUcm3tZoN8rJC3TTai+kdw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -445,9 +445,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
