--- a/VRChat/17/1020617.html
+++ b/VRChat/17/1020617.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "xbVzxA8lRlVvC3sgNLgD2oXtJTrgPAsfwU1tKF1+RU0="></script>
+    "tqj2VP+LhkLzR7062G4wpZemZTddkj7f0aoPSOxdnII="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けアクセサリー「HandyKUMA」","description":"■モデルの説明■\nくずくま作のVRChat向けアクセサリー「HandyKUMA」です。\nUnityでアバターにうまく装備させることができない方のために説明書を同封しました。\nDynamicBoneなしでも装着することができます。\n\n■内容物■\n・fbxモデル２点・・・HandyKUMA_A_v1.0　および　HandyKUMA_B_v1.0\n・装備説明書    ・・・VRC向けアクセサリーかんたん調整ガイド.pdf\n・テクスチャ・・・画像1枚　PSD1枚\n・仕様書\n・アニメーション１つ・・・BaseAnim_unitypackage\n\n\n■注意■\nDyamicBone用のボーンは設定していますが、細かい設定は各自で行ってください。\nBaseAnim.unitypackageは、アニメーション設定用のものです。同封の調整ガイドを読みながら使用方法が書いてあります。\n　\n■利用規約■\n本商品を購入した時点で利用規約に同意したものとみなします。\n本モデルおよび改造モデルの著作権は「くずくま」に帰属します。\nいかなる形であれ、他者を人種・宗教その他の点で誹謗中傷したりするような公序良俗に反する形での使用を禁止します。\n本モデルそのもの、または本モデルの一部を含むモデル、あるいは改変可能な形での配布・販売を禁止します。※簡単にはモデルデータを抽出できない形でのゲームや動画等での使用は許可します。\nエロ・グロ目的の利用を許可します。\n商用利用・営利目的の利用を許可します。収益化等の制限、許諾、クレジット表記は不要ですが、クレジットを記載していたけると嬉しいです。\nこの規約は予告なく変更する場合があります。\n\n■連絡先■\nなにか不具合、要望、質問等ございましたら、ささいなことでも遠慮なく下記のツイッターアカウント宛にリプかDMで連絡してください。\n\nTwitter　くずくま(@ccbmccbm) : https://twitter.com/ccbmccbm\n","url":"https://booth.pm/ja/items/1020617","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/67805be5-d4ad-49cb-a865-0b639883ebab/i/1020617/d70e7a99-ab61-4485-93cf-3a881a014812_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xbVzxA8lRlVvC3sgNLgD2oXtJTrgPAsfwU1tKF1+RU0="></script>
+    nonce="tqj2VP+LhkLzR7062G4wpZemZTddkj7f0aoPSOxdnII="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -404,9 +404,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
