--- a/VRChat/72/1019972.html
+++ b/VRChat/72/1019972.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Vjz3HSqbbJPYHjv5MOHGz/rtxo6r6z1whvcExq3/W6o="></script>
+    "ylZAx/IGM1c1sCatmKoF8+SF6+TeRGpCv7MjWLTj2GA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Miilo","description":"\u003c概要\u003e\n白と金を基調とした銃です。リボルバー、対戦車ライフル、スナイパーライフルをモチーフとしたものです。いくつかのmeshに分かれてます。シリンダーのクリスタルは一本ずつ外せます。本物が見たい方はshop概要欄からお店に飛べるので、そちらからどうぞ。\n\n\u003c中身\u003e\n・unitypackage(prefab,fbx,texture,materialなど)\n・read me\n\n\u003c規約の目安\u003e\n規約は同封のread meに書いてあります。これは目安としてください。これは規約ではありません。\n・商業利用可\n・二次配布、3Dモデルとしての販売の禁止\n・著作権はすべてAcysShiaruReusに帰属する","url":"https://booth.pm/ja/items/1019972","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/2d13a0c0-2756-4fa9-b3b6-77f3f8714856/i/1019972/ccd5f3f9-a338-45ad-b51f-1a6cde97789b_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Vjz3HSqbbJPYHjv5MOHGz/rtxo6r6z1whvcExq3/W6o="></script>
+    nonce="ylZAx/IGM1c1sCatmKoF8+SF6+TeRGpCv7MjWLTj2GA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -393,9 +393,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
