--- a/VRChat/72/1018372.html
+++ b/VRChat/72/1018372.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Krg9vaD0M6GNrra9Pv5XdN7G8gOyieg1AySthHgGbyY="></script>
+    "wTOYsUp/Y+0ckteqkNObfgHIvVIBtEcxC7PtfGpyaVE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボクセル和装セット７種","description":"VRChatでの使用を想定して作成されたボクセルの和風小物データです。VRchat以外での使用も可能です。\n＜アップデートver2,0＞\n提灯を追加しました。\n\n\n＜モデル情報＞\n櫛　△2428ポリゴン\n簪　△5896ポリゴン\n刀　刀身△664、鞘△1466ポリゴン\n傘　開状態△14678、閉状態△1040ポリゴン\n面　△5664ポリゴン\n扇　開状態△5268、閉状態△940ポリゴン\n\n＜配布データ＞\n各小物のvox,fbx,テクスチャファイル。\nテクスチャが複数あるものは色差分です。\n\n\n＜注意＞\n・全体的にポリゴン数が多くなってしまいました。ポリゴン制　限がオーバーしてしまわないように注意してください。\n・アニメーションオーバーライドで出すことを推奨します。\n・傘と扇子については閉じた状態でのポリゴン数は少ないので　そのままアバターにつけることはできると思います。\n\n＜利用規約＞\nーーーーーーーーーーーーー\n読みたくない方向けの大まかなもの\n\n・小物だし再配布以外は何してくれてもいいですよー。\n\nーーーーーーーーーーーーー\n\n・本規約は当データを購入し、使用した時点で同意したものとします。\n当モデルを使用したことによる損失、トラブルに対して私「カイム」は責任を負いかねますので\nご了承ください。\n・当モデルの配布データおよびその改変データの権利はモデル製作者である\nカイムに帰属するものとします。\n\n（商業利用について）\n・当データは改変、未改変問わず営利活動にて使用することが可能です。\n　それに伴って金銭が発生する動画配信ではクレジットの必要なしに写りこむことができます\n・また当データはVRChatでの使用をを想定して制作されていますが、VRChat以外での使用（virtual castなど）は\n　可能です。\n\n（性的な目的での利用について）\n・制限いたしません。お好きにお使いください。\n\n（改変について）\n・当モデルは改変推奨です。配布データのvoxファイルから原型を留めない改変をすることも可能です。\n　扇子等は模様を書き換えてオリジナルのもようにすることも可能です。再配布は禁止です。\n\n（禁則事項）\n・当モデルを改変、未改変問わず再配布、販売することを禁止いたします。\nワールドに小物を置くこと自体は可能です。\n・特定の個人、団体、宗教等に関する改変、または当データを利用したそれらへの誹謗中傷を禁止します。\n\n（その他）\nいろいろ書きましたが結局再配布と悪意のある使い方以外ならばご自由に利用できます。\n良いボクセルライフを。\n\n\n\n制作：桜の箱庭（カイム）　URL：https://caimvoxels.booth.pm/\ntwitter：plus515\nVRChat：camio_53\n","url":"https://booth.pm/ja/items/1018372","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/ef2009a1-23cb-48b4-a676-c380a8e1368a/i/1018372/840a13e6-e5bc-41f3-a500-b5389747963b_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Krg9vaD0M6GNrra9Pv5XdN7G8gOyieg1AySthHgGbyY="></script>
+    nonce="wTOYsUp/Y+0ckteqkNObfgHIvVIBtEcxC7PtfGpyaVE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -403,9 +403,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
