--- a/VRChat/81/1018281.html
+++ b/VRChat/81/1018281.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "P8WcM4XPKB+PKXReKH510a2tBjxnl38BTBQ9EnV6FC8="></script>
+    "DYQKCtJ7GZBNxiQf9Acjfrj+uY1Pt85SnPKdHbJwf9M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ぬこみや式：ぬいぬいあばたあ","description":"[ぬこみや式・ぬいぬいあばたあ]\nポリ数9108、マテリアル数1、テクスチャ枚数1のシンプルかつ軽量なアバターです。\nフルトラッキング対応済です。\n\n●更新履歴\n9/19 …　Boothでの配布開始\n\n●プランに関して\nフリープラン、有料プランで内容物に違いはありません。基本的にはフリープランをご利用下さい。\nお金を入れるという気になられた方は有料プランをご利用下さい。","url":"https://booth.pm/ja/items/1018281","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e6170a80-5060-4a22-8c22-c10792111eba/i/1018281/ac8d72cf-2d46-4977-917b-5ffe0524a74d_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="P8WcM4XPKB+PKXReKH510a2tBjxnl38BTBQ9EnV6FC8="></script>
+    nonce="DYQKCtJ7GZBNxiQf9Acjfrj+uY1Pt85SnPKdHbJwf9M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -511,9 +511,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
