--- a/VRChat/13/1017513.html
+++ b/VRChat/13/1017513.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "CRVOxqwPXoqkPJaThd9DcKemDIv+NZx6OygO3k9YPi4="></script>
+    "+9WvxYDjSpy0vuI9GgRnP7ZN/KGz0QlKz/74gTNJhAo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"お休みさんのケータイ(支援用)","description":"＜こちらは支援用になります。別途無料配布の商品もありますが、内容は同一です。＞\n2000年代初めごろに日本で普及していた折り畳み携帯電話をイメージした3Dモデルです。\nVRChatアバターに持たせて懐かしさを感じたり、ワールドの小道具にしたりなど自由にお使いください。\n\n本モデル及び付属するファイルはすべてMITライセンスとなっており、MITライセンスに基づき再配布、商用利用、改変等すべて許可しています。\n\n◆foldingボーンの回転により画面を開閉できます。\n\n◆アンテナはAntennaシェイプキーにより伸縮できます。\n\n◆メイン画面およびサブ画面にはシェーダーとしてReflex氏(Twitter:@reflex_1124)の「Reflex's Clock Shader」をサンプルとして同梱、設定してあります。\n\n◆着信ランプ用として簡単なシェーダーを同梱しており、点滅させることができます。\n\n◆着信メロディとして「子犬のワルツ」を着信音風にアレンジしたものを同梱しており、着信音を鳴らすことができます。\n\n◆アンテナにはDynamic Boneを想定したボーン及びリグが入っています。ダイナミックボーンを使用するためには、別途有料アセットのDynamic Boneを導入する必要があります。","url":"https://booth.pm/ja/items/1017513","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/64255878-1532-4d6c-abdb-a9cf35ee4a39/i/1017513/fe219c3e-8808-497f-ab27-1232cb732a4a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CRVOxqwPXoqkPJaThd9DcKemDIv+NZx6OygO3k9YPi4="></script>
+    nonce="+9WvxYDjSpy0vuI9GgRnP7ZN/KGz0QlKz/74gTNJhAo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -413,9 +413,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
